--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -721,7 +721,7 @@
 
             <div class="page-title-actions">
                 {% if session['permissions'][RENDERED_MODEL.__amname__] is defined %}
-                {% if current_user.role.name == "Secretary" %}
+                {% if current_user.role.name in ['Secretary', 'Admin']  %}
                 <button type="button" data-toggle="modal" data-target="#mdl_deposit" data-placement="bottom"
                     class="btn-shadow mr-3 btn btn-primary">
                     <i class="fa fa-plus"></i> Deposit
