feat: add remarks column to add funds transactions table

--- a/prime_admin/templates/lms/fund_wallet/components/add_fund_transactions.html
+++ b/prime_admin/templates/lms/fund_wallet/components/add_fund_transactions.html
@@ -28,6 +28,7 @@
                     <th class="text-center">SENDER</th>
                     <th class="text-center">RECEIVER</th>
                     <th class="text-center">AMOUNT</th>
+                    <th class="text-center">REMARK</th>
                 </tr>
             </thead>
             <tbody>
