feat: refund on deposit

--- a/prime_admin/templates/lms/deposit_modal.html
+++ b/prime_admin/templates/lms/deposit_modal.html
@@ -53,6 +53,9 @@
                                             <option value="Emergency Fund">
                                                 Emergency Fund
                                             </option>
+                                            <option value="Refund">
+                                                Refund
+                                            </option>
                                         </select>
                                     </div>
                                 </div>
