feat: add remark in utilities table

--- a/prime_admin/templates/lms/fund_wallet/components/business_expenses/components/utilities.html
+++ b/prime_admin/templates/lms/fund_wallet/components/business_expenses/components/utilities.html
@@ -55,6 +55,7 @@
                     <th class="text-center">BILLING MONTH</th>
                     <th class="text-center">TOTAL AMOUNT DUE</th>
                     <th class="text-center">SETTLED BY</th>
+                    <th class="text-center">REMARK</th>
                 </tr>
             </thead>
             <tbody>
