feat: Reconstruct Bookeeper tab > bir, business permit and employee benefits

--- a/prime_admin/templates/lms/fund_wallet/components/business_expenses/business_expenses.html
+++ b/prime_admin/templates/lms/fund_wallet/components/business_expenses/business_expenses.html
@@ -61,7 +61,7 @@
                     </a>
                     <a data-toggle="tab" href="#tab-eg6-4"
                         class="border-0 btn-transition  btn btn-outline-primary">
-                        BOOKEPER
+                        BOOKEEPER
                     </a>
                     <a data-toggle="tab" href="#tab-eg6-5"
                         class="border-0 btn-transition  btn btn-outline-primary">
@@ -70,18 +70,6 @@
                     <a data-toggle="tab" href="#tab-eg6-6"
                         class="border-0 btn-transition  btn btn-outline-primary">
                         OTHER EXPENSES
-                    </a>
-                    <a data-toggle="tab" href="#tab-eg6-7"
-                        class="border-0 btn-transition  btn btn-outline-primary">
-                        BIR
-                    </a>
-                    <a data-toggle="tab" href="#tab-eg6-8"
-                        class="border-0 btn-transition  btn btn-outline-primary">
-                        BUSINESS PERMIT
-                    </a>
-                    <a data-toggle="tab" href="#tab-eg6-9"
-                        class="border-0 btn-transition  btn btn-outline-primary">
-                        EMPLOYEE BENEFITS
                     </a>
                     <a data-toggle="tab" href="#tab-eg6-10"
                         class="border-0 btn-transition  btn btn-outline-primary">
@@ -99,14 +87,6 @@
                 {% include 'lms/fund_wallet/components/business_expenses/components/bookeeper.html' %}
                 {% include 'lms/fund_wallet/components/business_expenses/components/refunded.html' %}
                 {% include 'lms/fund_wallet/components/business_expenses/components/other_expenses.html' %}
-         
-                <div class="tab-pane" id="tab-eg6-7" role="tabpanel">
-                    <p>Coming soon...</p>
-                </div>
-                <div class="tab-pane" id="tab-eg6-8" role="tabpanel">
-                    <p>Coming soon...</p>
-                </div>
-                {% include 'lms/fund_wallet/components/business_expenses/components/employee_benefits.html' %}
                 <div class="tab-pane" id="tab-eg6-10" role="tabpanel">
                     <p>Coming soon...</p>
                 </div>
