fix: 2nd half not equal payslip

--- a/prime_admin/templates/lms/fund_wallet/pdf_payslip.html
+++ b/prime_admin/templates/lms/fund_wallet/pdf_payslip.html
@@ -408,30 +408,30 @@
             
             <div class="eanings-table">
                 <div class="salary-label">SALARY</div>
-                <div class="salary-data">₱ 4038.00</div>
+                <div class="salary-data">₱ {{salary}}</div>
                 <div class="sss-label">SSS</div>
-                <div class="sss-data">₱ 0.00</div>
+                <div class="sss-data">₱ {{sss}}</div>
             </div>
 
             <div class="eanings-table">
                 <div class="foodallowance-label">FOOD ALLOWANCE</div>
-                <div class="foodallowance-data">₱ 0.00</div>
+                <div class="foodallowance-data">₱ {{food_allowance}}</div>
                 <div class="philhealth-label">PHILHEALTH</div>
-                <div class="philhealth-data">₱ 0.00</div>
+                <div class="philhealth-data">₱ {{phil_health}}</div>
             </div>
 
             <div class="eanings-table">
-                <div class="accommodation-label">ACCOMMODATIONE</div>
-                <div class="accommodation-data">₱ 0.00</div>
+                <div class="accommodation-label">ACCOMMODATION</div>
+                <div class="accommodation-data">₱ {{accommodation}}</div>
                 <div class="pagibig-label">PAG-IBIG</div>
-                <div class="pagibig-data">₱ 0.00</div>
+                <div class="pagibig-data">₱ {{pag_ibig}}</div>
             </div>
 
             <div class="eanings-table">
                 <div class="rebate-label">REBATE</div>
-                <div class="rebate-data">₱ 0.00</div>
+                <div class="rebate-data">₱ {{rebate}}</div>
                 <div class="ca-label">C.A</div>
-                <div class="ca-data">₱ 0.00</div>
+                <div class="ca-data">₱ {{cash_advance}}</div>
             </div>
 
             <div class="eanings-table">
