--- a/prime_admin/templates/lms/fund_wallet/components/business_expenses/components/salaries.html
+++ b/prime_admin/templates/lms/fund_wallet/components/business_expenses/components/salaries.html
@@ -1,4 +1,23 @@
 <div class="tab-pane" id="tab-eg6-2" role="tabpanel">
+    <div class="form-row">
+        <div class="col-md-4">
+            <div class="position-relative form-group">
+                <label for="lname" class="">Search</label>
+                <div class="input-group">
+                    <div class="input-group-append">
+                        <input id="search_input_salary" placeholder="Last Name" type="text"
+                            class="form-control">
+                        <button id="btn_search_salary" class="btn btn-primary"><i class="pe-7s-search">
+                            </i></button>
+                        <button id="btn_clear_entry_salary"
+                            class="border-0 btn-transition btn btn-outline-danger"><i
+                                class="pe-7s-close">
+                            </i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div style="margin-top: 10px;" class="table-responsive">
         <table id="tbl_salary"
             class="align-middle mb-0 table table-bordered table-striped table-hover">
@@ -6,7 +25,7 @@
                 <tr>
                     <th class="text-center">DATE</th>
                     <th class="text-center">NAME OF EMPLOYEE</th>
-                    <th class="text-center">CUT OF DATE</th>
+                    <th class="text-center">CUT-OFF DATE</th>
                     <th class="text-center">GROSS SALARY</th>
                     <th class="text-center">DEDUCTION</th>
                     <th class="text-center">NET</th>
