feat: deduction columns in salaries

--- a/prime_admin/templates/lms/fund_wallet/components/business_expenses/components/salaries.html
+++ b/prime_admin/templates/lms/fund_wallet/components/business_expenses/components/salaries.html
@@ -27,6 +27,9 @@
                     <th class="text-center">NAME OF EMPLOYEE</th>
                     <th class="text-center">CUT-OFF DATE</th>
                     <th class="text-center">GROSS SALARY</th>
+                    <th class="text-center">CASH ADV.</th>
+                    <th class="text-center">ACCOMMODATION</th>
+                    <th class="text-center">GOVT BEN.</th>
                     <th class="text-center">DEDUCTION</th>
                     <th class="text-center">NET</th>
                     <th class="text-center">SETTLED BY</th>
