--- a/prime_admin/templates/lms/student_supplies/student_supplies_page.html
+++ b/prime_admin/templates/lms/student_supplies/student_supplies_page.html
@@ -369,6 +369,7 @@
                             <label for="filter_year" class="">Year</label>
                             <select id="filter_year" class="form-control" required>
                                 <option value="all">All</option>
+                                <option value="2024">2024</option>
                                 <option value="2023">2023</option>
                                 <option value="2022">2022</option>
                                 <option value="2021">2021</option>
