feat: add venue settings

--- a/prime_admin/templates/lms/settings_sidebar.html
+++ b/prime_admin/templates/lms/settings_sidebar.html
@@ -80,8 +80,8 @@
                                 Sessions
                             </a>
                         </li>
-                        <li id="li_examiners">
-                            <a href="{{url_for('bp_admin.under_construction')}}?message=Venues">
+                        <li id="li_venues">
+                            <a href="{{url_for('lms.venues_settings')}}">
                                 <i class="metismenu-icon"></i>
                                 Venues
                             </a>
