feat: replaced Sales deposit

--- a/prime_admin/templates/lms/deposit_modal.html
+++ b/prime_admin/templates/lms/deposit_modal.html
@@ -44,8 +44,11 @@
                                         <select id="from_what" name="from_what" id="from_what" class="form-control"
                                             required="">
                                             <option value="">Choose...</option>
-                                            <option value="Sales">
-                                                Sales
+                                            <option value="CASH ON HAND">
+                                                Cash on Hand
+                                            </option>
+                                            <option value="ONLINE PAYMENT">
+                                                Online Payment
                                             </option>
                                             <option value="Student Loan Payment">
                                                 Student Loan Payment
