feat: registration thru and reference no

--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -625,6 +625,8 @@
                             <td class="text-center">${response.data.payments[i].date}</td>
                             <td class="text-center">${response.data.payments[i].payment_by}</td>
                             <td class="text-center">${response.data.payments[i].amount}</td>
+                            <td class="text-center">${response.data.payments[i].thru}</td>
+                            <td class="text-center">${response.data.payments[i].reference_no}</td>
                             <td class="text-center">${response.data.payments[i].payment_mode}</td>
                             </tr>`
                         );
