--- a/prime_admin/templates/lms/cash_flow_view_modal.html
+++ b/prime_admin/templates/lms/cash_flow_view_modal.html
@@ -17,6 +17,8 @@
                                 <th class="text-center">DATE</th>
                                 <th class="text-center">PAYMENT BY</th>
                                 <th class="text-center">AMOUNT</th>
+                                <th class="text-center">THRU</th>
+                                <th class="text-center">REFERENCE NO.</th>
                                 <th class="text-center">PAYMENT MODE</th>
                             </tr>
                             </thead>
