--- a/prime_admin/templates/lms/deposit_modal.html
+++ b/prime_admin/templates/lms/deposit_modal.html
@@ -44,11 +44,8 @@
                                         <select id="from_what" name="from_what" id="from_what" class="form-control"
                                             required="">
                                             <option value="">Choose...</option>
-                                            <option value="CASH ON HAND">
-                                                Cash on Hand
-                                            </option>
-                                            <option value="ONLINE PAYMENT">
-                                                Online Payment
+                                            <option value="Sales">
+                                                Sales
                                             </option>
                                             <option value="Student Loan Payment">
                                                 Student Loan Payment
