--- a/prime_admin/templates/lms/registration.html
+++ b/prime_admin/templates/lms/registration.html
@@ -673,6 +673,48 @@
                         </div>
                     </div>
                 </div>
+                <div class="form-row">
+                    <div class="col-md-6">
+                    </div>
+                    <div class="col-md-3">
+                        <div class="position-relative form-group">
+                            <label for="thru" class="">Thru</label>
+                            <select name="thru" id="thru" class="form-control" required>
+                                <option value="">Choose...</option>
+                                <option value="OVER THE COUNTER">OVER THE COUNTER</option>
+                                <option value="GCASH">GCASH</option>
+                                <option value="PAYMAYA">PAYMAYA</option>
+                                <option value="PALAWAN EXPRESS">PALAWAN EXPRESS</option>
+                                <option value="LANDBANK">LANDBANK</option>
+                                <option value="BDO">BDO</option>
+                                <option value="BPI">BPI</option>
+                                <option value="METROBANK">METROBANK</option>
+                                <option value="RCBC">RCBC</option>
+                                <option value="CHINABANK">CHINABANK</option>
+                                <option value="EASTWEST BANK">EASTWEST BANK</option>
+                                <option value="UNIONBANK">UNIONBANK</option>
+                            </select>
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please provide a thru
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="position-relative form-group">
+                            <label for="reference_no" class="">Reference No.</label>
+                            <input name="reference_no" id="reference_no" type="text" class="form-control">
+                            <div class="valid-feedback">
+                                Looks good!
+                            </div>
+                            <div class="invalid-feedback">
+                                Please provide a valid Reference no.
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
