--- a/prime_admin/templates/lms/client_edit_modal.html
+++ b/prime_admin/templates/lms/client_edit_modal.html
@@ -155,7 +155,7 @@
                                 <div class="col-md-6">
                                     <div class="position-relative form-group">
                                         <label for="reference_no" class="">Reference No.</label>
-                                        <input name="reference_no" id="reference_no" type="text" class="form-control">
+                                        <input name="reference_no" id="reference_no" type="text" class="form-control" required>
                                         <div class="valid-feedback">
                                             Looks good!
                                         </div>
