--- a/prime_admin/templates/lms/registration.html
+++ b/prime_admin/templates/lms/registration.html
@@ -705,7 +705,7 @@
                     <div class="col-md-3">
                         <div class="position-relative form-group">
                             <label for="reference_no" class="">Reference No.</label>
-                            <input name="reference_no" id="reference_no" type="text" class="form-control">
+                            <input name="reference_no" id="reference_no" type="text" class="form-control" required>
                             <div class="valid-feedback">
                                 Looks good!
                             </div>
